# constructicon_updates

./: Makefile  README.md  docker-compose.yml
server/: pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 115b26f521b3_.py  52140b3ada8a_.py  6a8362c400dc_.py  92f05a99bfe1_.py  bf85ffea75af_.py  c27a85766bc5_.py  c2f9883762b2_.py  c9260e7756b2_.py  d85884e8e35a_.py
server/app/: deps.py  main.py  shortcuts.py
server/app/api/: urls.py
server/app/api/endpoints/: common.py  construction.py
server/app/core/: settings.py
server/app/db/: __init__.py  base_model.py  crud.py
server/app/models/: __init__.py  construction.py  construction_import.py  construction_related.py  construction_tags.py  construction_types.py  glosses.py  singleton.py  user.py
server/app/schemas/: __init__.py
server/app/static/css/: style.css
server/app/static/other/: 404.html  index.html  robots.txt  sitemap.xml
server/app/static/other/about/: index.html
server/app/static/other/advanced-search/: index.html
server/app/static/other/construction/: index.html
server/app/static/other/daily/: index.html
server/app/static/other/instructions/: index.html
server/app/static/other/semantic-types/: index.html
server/app/static/other/semantic-types-russian/: index.html
server/app/static/other/statistics/: index.html
server/tests/: conftest.py
server/tests/api/endpoints/: test_common.py  test_construction.py  test_user.py
server/tests/api/endpoints/data/: data50.csv  glosses_data.csv
server/tests/api/endpoints/test_construction/: test_construction.yml  test_construction_import.yml  test_construction_import_glosses.yml  test_construction_list___anchor_poss____1_2___.yml  test_construction_list___anchor_poss____6_2___.yml  test_construction_list___cefr_level____A1_C1___.yml  test_construction_list___cefr_level____A1___.yml  test_construction_list___glosses____vp_pfv_нечего__3sg___.yml  test_construction_list___morphological_tags____1_2___.yml  test_construction_list___morphological_tags____6_2___.yml  test_construction_list___name____nom___.yml  test_construction_list___semantic_roles____1_2___.yml  test_construction_list___semantic_roles____6_2___.yml  test_search_info.yml  (+7 more)
server/tests/fixtures/: client.py
ui/: config.toml  (+2 more)
(+17 files in other folders)
